docs: add `trustedProxyHeaders` section to security reference (#7835)
(cherry picked from commit bb493940367e0d27498f7fd2f47370d6ef964b25)

--- a/docs/content/docs/reference/security.mdx
+++ b/docs/content/docs/reference/security.mdx
@@ -156,6 +156,36 @@ This ensures that Better Auth only accepts IP addresses from your trusted proxy'
 - In dev/test environments, if the IP cannot be retrieved from headers, 127.0.0.1 is used as a fallback.
 </Callout>
 
+## Trusted Proxy Headers
+
+If your application runs behind a reverse proxy or load balancer, Better Auth can derive the base URL from the inbound request's `X-Forwarded-Host` and `X-Forwarded-Proto` headers. This is useful when your app is accessible from multiple domains (e.g. `example.com` and `app.example.dev`) and you don't want to hardcode a single `baseURL` in the configuration.
+
+When `trustedProxyHeaders` is enabled and no `baseURL` is set in the configuration (or via environment variables), Better Auth uses the forwarded headers to construct the base URL on each request. This means OAuth callbacks, email verification links, and redirects will automatically use whichever domain the user loaded the app on.
+
+```typescript
+{
+  advanced: {
+    trustedProxyHeaders: true
+  }
+}
+```
+
+<Callout type="warning">
+Only enable this option if you trust the proxy headers reaching your application. Your reverse proxy or load balancer must be configured to set `X-Forwarded-Host` and `X-Forwarded-Proto` correctly, and end users must not be able to set these headers directly. If untrusted clients can forge these headers, they could manipulate redirects and callback URLs.
+</Callout>
+
+When enabled, the base URL resolution follows this priority:
+
+1. Static `baseURL` from the configuration (if set, proxy headers are ignored)
+2. Environment variables (`BETTER_AUTH_URL`, `NEXT_PUBLIC_BETTER_AUTH_URL`, etc.)
+3. `X-Forwarded-Host` + `X-Forwarded-Proto` headers (when `trustedProxyHeaders` is `true`)
+4. The request URL origin as a final fallback
+
+If you're serving your app from multiple approved domains, you'll typically want to:
+- **Omit `baseURL`** from the configuration so it's derived per-request from the proxy headers
+- Set **`trustedOrigins`** to an allowlist of your approved domains (see below)
+- Leave `crossSubDomainCookies` disabled — cookies are host-only by default, which means each domain gets its own independent session
+
 ## Trusted Origins
 
 Trusted origins prevent CSRF attacks and block open redirects. You can set a list of trusted origins in the `trustedOrigins` configuration option. Requests from origins not on this list are automatically blocked.
