--- a/docs/content/docs/concepts/plugins.mdx
+++ b/docs/content/docs/concepts/plugins.mdx
@@ -172,7 +172,7 @@ The key is the column name and the value is the column definition. The column de
 
 `type`: The type of the field. It can be `string`, `number`, `boolean`, `date`.
 
-`required`:  if the field should be required on a new record. (default: `false`)
+`required`:  if the field should be required on a new record. (default: `true`)
 
 `unique`: if the field should be unique. (default: `false`)
 
