docs(admin.mdx): export const ac (#8000)
(cherry picked from commit b6744552f38df3930b0ba5bf0031aeca0b2eaf06)

--- a/docs/content/docs/plugins/admin.mdx
+++ b/docs/content/docs/plugins/admin.mdx
@@ -501,7 +501,7 @@ The plugin provides an easy way to define your own set of permissions for each r
         project: ["create", "share", "update", "delete"], // <-- Permissions available for created roles
     } as const;
 
-    const ac = createAccessControl(statement);
+    export const ac = createAccessControl(statement);
 
     export const user = ac.newRole({ // [!code highlight]
         project: ["create"], // [!code highlight]
